Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
       </section><br>
 
       <section id="sobre">
-        <h2>4. Em “A Bruxa de Blair” (1999), o filme é apresentado em qual estilo cinematográfico?</h2>
-        <img src="img/bruxa_de_blair.jpg" id="img"><br><br>
-        <button type="button" class="btn btn-danger m-2" onclick="errado(this)">A) Documentário tradicional</button>
-        <button type="button" class="btn btn-danger m-2" onclick="errado(this)">B) Animação stop-motion</button>
-        <button type="button" class="btn btn-danger m-2" id="certo" onclick="certo(this)">C) Filmagem encontrada (found footage)</button>
-        <button type="button" class="btn btn-danger m-2" onclick="errado(this)">D) Mockumentary de comédia</button>
+        <h2>4. Em Invocação do Mal (2013), qual é o nome da família que procura a ajuda de Ed e Lorraine Warren?</h2>
+        <img src="img/invocacao.jpg" id="img"><br><br>
+        <button type="button" class="btn btn-danger m-2" onclick="errado(this)">A) Hodgson</button>
+        <button type="button" class="btn btn-danger m-2" onclick="errado(this)">B) Warren</button>
+        <button type="button" class="btn btn-danger m-2" id="certo" onclick="certo(this)">C) Perron</button>
+        <button type="button" class="btn btn-danger m-2" onclick="errado(this)">D) Lutz</button>
       </section><br>
 
       <section id="sobre">
