Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ function pontuacaoFinal() {
     pontuacaoMostrada = true; // <- Marca como exibido
     Swal.fire({
       title: "Pontuação: " + pontuacao + "/8",
-      text: "Gostou da sua nota?",
+      text: "Acabou o Quizz!",
       imageUrl: "img/exorcista.gif",        
       imageWidth: 300,                     
       imageHeight: 200,
