Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <section id="sobre">
         <h2>4. Em Invocação do Mal (2013), qual é o nome da família que procura a ajuda de Ed e Lorraine Warren?</h2>
-        <img src="img/invocacao.jpg" id="img"><br><br>
+        <img src="img/IMG_4574.webp" id="img"><br><br>
         <button type="button" class="btn btn-danger m-2" onclick="errado(this)">A) Hodgson</button>
         <button type="button" class="btn btn-danger m-2" onclick="errado(this)">B) Warren</button>
         <button type="button" class="btn btn-danger m-2" id="certo" onclick="certo(this)">C) Perron</button>
